--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		
 			<div>
 				<a href="newyork.html">
-					<center><img src="images/mainphotos/BanffMain.jpg" alt="no image" width=100%>
+					<center><img src="images/mainphotos/BanffMain.JPG" alt="no image" width=100%>
 				</a>
 			</div>
 		
@@ -42,13 +42,13 @@
 		
 			<div>
 				<a href="newyork.html">
-					<img src="images/mainphotos/LondonMain.jpg" alt="no image" width=100%>
+					<img src="images/mainphotos/LondonMain.JPG" alt="no image" width=100%>
 				</a>
 			</div>
 		
 			<div>
 				<a href="newyork.html">
-					<center><img src="images/mainphotos/DubaiMain.jpg" alt="no image" width=100%>
+					<center><img src="images/mainphotos/DubaiMain.JPG" alt="no image" width=100%>
 				</a>
 			</div>
 			
