--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Photography Website</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
@@ -16,40 +17,46 @@
 		
 		<div class="image-grid">
 			
-			<div>
+			<div class="linkable-image">
 				<a href="avilabeach.html">
 					<img src="images/mainphotos/NewYorkMain.jpg" alt="no image" width=100%>
 				</a>
+				<div class="linkable-image-title">United States</div>
 			</div>
 		
-			<div>
+			<div class="linkable-image">
 				<a href="newyork.html">
-					<center><img src="images/mainphotos/BanffMain.JPG" alt="no image" width=100%>
+					<img src="images/mainphotos/BanffMain.JPG" alt="no image" width=100%>
 				</a>
+				<div class="linkable-image-title">Canada</div>
 			</div>
 		
-			<div>
+			<div class="linkable-image">
 				<a href="newyork.html">
-					<center><img src="images/mainphotos/FijiMain.jpg" alt="no image" width=100%>
+					<img src="images/mainphotos/FijiMain.jpg" alt="no image" width=100%>
 				</a>
+				<div class="linkable-image-title">Fiji</div>
 			</div>
 		
-			<div>
+			<div class="linkable-image">
 				<a href="newyork.html">
-					<center><img src="images/mainphotos/IndiaMain.jpg" alt="no image" width=100%>
+					<img src="images/mainphotos/IndiaMain.jpg" alt="no image" width=100%>
 				</a>
+				<div class="linkable-image-title">India</div>
 			</div>
 		
-			<div>
+			<div class="linkable-image">
 				<a href="newyork.html">
 					<img src="images/mainphotos/LondonMain.JPG" alt="no image" width=100%>
 				</a>
+				<div class="linkable-image-title">United Kingdom</div>
 			</div>
 		
-			<div>
+			<div class="linkable-image">
 				<a href="newyork.html">
-					<center><img src="images/mainphotos/DubaiMain.JPG" alt="no image" width=100%>
+					<img src="images/mainphotos/DubaiMain.JPG" alt="no image" width=100%>
 				</a>
+				<div class="linkable-image-title">United Arab Emirates</div>
 			</div>
 			
 		</div>
