--- a/avilabeach.html
+++ b/avilabeach.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Avila Beach, California</title>
+		<title>Avila Beach</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
 		
 		<header id="main-header">
 			<a href="index.html">
-				<h1>Photography</h1>
+				<h1>Avila Beach</h1>
 			</a>
 		</header>
 		
-		
-		<div class="place-title-subpage">
-			<center><h1>Avila Beach, California</h1>
+		<!--
+		<div class="image-grid">
+			
+			<img src="images/subphotos/AvilaBeach1.jpg" alt="no image" width=100%>
+			<img src="images/subphotos/AvilaBeach2.jpg" alt="no image" width=100%>
+			<img src="images/subphotos/AvilaBeach3.jpg" alt="no image" width=100%>
+			<img src="images/subphotos/AvilaBeach4.jpg" alt="no image" width=100%>
+			<img src="images/subphotos/AvilaBeach5.jpg" alt="no image" width=100%>
+			
 		</div>
-
+		-->
 		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach1.jpg" alt="no image" width=95%>
+		<div class="gallery">
+			<div>
+				<img src="images/subphotos/AvilaBeach1.jpg" alt="no image">
+			</div>
+			
+			<div class="bigger">
+				<img src="images/subphotos/AvilaBeach2.jpg" alt="no image">
+			</div>
+			
+			<div>
+				<img src="images/subphotos/AvilaBeach3.jpg" alt="no image">
+			</div>
+			
+			<div class="panoramic">
+				<img src="images/subphotos/AvilaBeach4.jpg" alt="no image">
+			</div>
+			
+			<div>
+				<img src="images/subphotos/AvilaBeach5.jpg" alt="no image">
+			</div>
 		</div>
-		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach2.jpg" alt="no image" width=95%>
-		</div>
-		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach3.jpg" alt="no image" width=95%>
-		</div>
-		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach4.jpg" alt="no image" width=95%>
-		</div>
-		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach5.jpg" alt="no image" width=95%>
-		</div>
-		
 		
 		
 		
