--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 		<div class="image-grid">
 			
 			<div class="linkable-image">
-				<a href="avilabeach.html">
-					<img src="images/mainphotos/NewYorkMain.jpg" alt="no image" width=100%>
+				
+				<img src="images/mainphotos/NewYorkMain.jpg" alt="no image" width=100%>
+				<a href="unitedstates.html">
+					<div class="linkable-image-title">United States</div>
 				</a>
-				<div class="linkable-image-title">United States</div>
 			</div>
 		
 			<div class="linkable-image">
