--- a/avilabeach.html
+++ b/avilabeach.html
@@ -14,41 +14,35 @@
 			</a>
 		</header>
 		
-		<!--
-		<div class="image-grid">
-			
-			<img src="images/subphotos/AvilaBeach1.jpg" alt="no image" width=100%>
-			<img src="images/subphotos/AvilaBeach2.jpg" alt="no image" width=100%>
-			<img src="images/subphotos/AvilaBeach3.jpg" alt="no image" width=100%>
-			<img src="images/subphotos/AvilaBeach4.jpg" alt="no image" width=100%>
-			<img src="images/subphotos/AvilaBeach5.jpg" alt="no image" width=100%>
-			
-		</div>
-		-->
-		
 		<div class="gallery">
 			<div>
-				<img src="images/subphotos/AvilaBeach1.jpg" alt="no image">
+				<img src="images/subphotos/AvilaBeach/AvilaBeach1.jpg" alt="no image">
 			</div>
 			
 			<div class="bigger">
-				<img src="images/subphotos/AvilaBeach2.jpg" alt="no image">
+				<img src="images/subphotos/AvilaBeach/AvilaBeach2.jpg" alt="no image">
+			</div>
+			
+			<div class="bigger">
+				<img src="images/subphotos/AvilaBeach/AvilaBeach3.JPG" alt="no image">
+			</div>
+			
+			<div class="large-panoramic">
+				<img src="images/subphotos/AvilaBeach/AvilaBeach4.jpg" alt="no image">
 			</div>
 			
 			<div>
-				<img src="images/subphotos/AvilaBeach3.jpg" alt="no image">
-			</div>
-			
-			<div class="panoramic">
-				<img src="images/subphotos/AvilaBeach4.jpg" alt="no image">
+				<img src="images/subphotos/AvilaBeach/AvilaBeach5.jpg" alt="no image">
 			</div>
 			
 			<div>
-				<img src="images/subphotos/AvilaBeach5.jpg" alt="no image">
+				<img src="images/subphotos/AvilaBeach/AvilaBeach6.jpg" alt="no image">
+			</div>
+			
+			<div>
+				<img src="images/subphotos/AvilaBeach/AvilaBeach7.jpg" alt="no image">
 			</div>
 		</div>
-		
-		
 		
 		<footer id="main-footer">
 			<p>Copyright &copy; 2022 Daiwik Swaminathan</p>
