--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		
 		<div class="image-grid">
 			
-			<div class="linkable-image">
-				
-				<img src="images/mainphotos/NewYorkMain.jpg" alt="no image" width=100%>
-				<a href="unitedstates.html">
-					<div class="linkable-image-title">United States</div>
-				</a>
-			</div>
+			<a href="unitedstates.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/NewYorkMain.jpg" alt="no image" width=100%>
+					<h1>United States</h1>
+					<p>See Gallery</p>
+				</div>
+			</a>
 		
 			<div class="linkable-image">
 				<a href="newyork.html">
