--- a/unitedstates.html
+++ b/unitedstates.html
@@ -18,7 +18,6 @@
 		<div class="image-grid">
 			
 			<div class="linkable-image">
-				
 				<img src="images/mainphotos/SantaBarbaraMain.jpg" alt="no image" width=100%>
 				<a href="california.html">
 					<div class="linkable-image-title">California</div>
@@ -54,10 +53,10 @@
 			</div>
 		
 			<div class="linkable-image">
-				<a href="newyork.html">
-					<img src="images/mainphotos/LasVegasMain.JPG" alt="no image" width=100%>
+				<img src="images/mainphotos/LasVegasMain.JPG" alt="no image" width=100%>
+				<a href="nevada.html">
+					<div class="linkable-image-title">Nevada</div>
 				</a>
-				<div class="linkable-image-title">Nevada</div>
 			</div>
 			
 		</div>
