--- a/california.html
+++ b/california.html
@@ -17,62 +17,61 @@
 		
 		<div class="image-grid">
 			
-			<div class="linkable-image">
-				
-				<img src="images/mainphotos/AvilaBeachMain.jpg" alt="no image" width=100%>
-				<a href="avilabeach.html">
-					<div class="linkable-image-title">Avila Beach</div>
-				</a>
-			</div>
+			<a href="avilabeach.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/AvilaBeachMain.jpg" alt="no image" width=100%>
+					<h1>Avila Beach</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/CarmelMain.JPG" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Carmel</div>
-			</div>
+					<h1>Carmel</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/HalfMoonBayMain.jpg" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Half Moon Bay</div>
-			</div>
+					<h1>Half Moon Bay</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/LosAngelesMain.JPG" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Los Angeles</div>
-			</div>
+					<h1>Los Angeles</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/MarineHeadlandsMain.JPG" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Marine Headlands</div>
-			</div>
+					<h1>Marine Headlands</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/MuirWoodsMain.JPG" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Muir Woods</div>
-			</div>
+					<h1>Muir Woods</h1>
+				</div>
+			</a>
 			
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/SantaBarbaraMain.jpg" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Santa Barbara</div>
-			</div>
+					<h1>Santa Barbara</h1>
+				</div>
+			</a>
 			
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/YosemiteMain.JPG" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Yosemite</div>
-			</div>
+					<h1>Yosemite</h1>
+				</div>
+			</a>
 			
 		</div>
 
