--- a/unitedarabemirates.html
+++ b/unitedarabemirates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Nevada</title>
+		<title>United Arab Emirates</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
@@ -10,20 +10,20 @@
 		
 		<header id="main-header">
 			<a href="index.html">
-				<h1>Nevada</h1>
+				<h1>United Arab Emirates</h1>
 			</a>
 		</header>
 		
 		
-		<div>
-			<a href="lasvegas.html">
+		<div class="image-grid">
+			
+			<a href="california.html">
 				<div class="linkable-image">
-					
-					<img src="images/mainphotos/LasVegasMain.JPG" alt="no image" width=100%>
-					<h1>Las Vegas</h1>
-					
+					<img src="images/mainphotos/SantaBarbaraMain.jpg" alt="no image" width=100%>
+					<h1>California</h1>
 				</div>
 			</a>
+			
 		</div>
 		
 		<footer id="main-footer">
