--- a/unitedstates.html
+++ b/unitedstates.html
@@ -17,47 +17,47 @@
 		
 		<div class="image-grid">
 			
-			<div class="linkable-image">
-				<img src="images/mainphotos/SantaBarbaraMain.jpg" alt="no image" width=100%>
-				<a href="california.html">
-					<div class="linkable-image-title">California</div>
-				</a>
-			</div>
+			<a href="california.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/SantaBarbaraMain.jpg" alt="no image" width=100%>
+					<h1>California</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/NewYorkMain.jpg" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">New York</div>
-			</div>
+					<h1>New York</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/KauaiMain.jpg" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Hawaii</div>
-			</div>
+					<h1>Hawaii</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/SeattleMain.jpg" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Washington</div>
-			</div>
+					<h1>Washington</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<a href="newyork.html">
+			<a href="newyork.html">
+				<div class="linkable-image">
 					<img src="images/mainphotos/GrandCanyonMain.JPG" alt="no image" width=100%>
-				</a>
-				<div class="linkable-image-title">Arizona</div>
-			</div>
+					<h1>Arizona</h1>
+				</div>
+			</a>
 		
-			<div class="linkable-image">
-				<img src="images/mainphotos/LasVegasMain.JPG" alt="no image" width=100%>
-				<a href="nevada.html">
-					<div class="linkable-image-title">Nevada</div>
-				</a>
-			</div>
+			<a href="nevada.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/LasVegasMain.JPG" alt="no image" width=100%>
+					<h1>Nevada</h1>
+				</div>
+			</a>
 			
 		</div>
 
