--- a/index.html
+++ b/index.html
@@ -21,10 +21,45 @@
 				<div class="linkable-image">
 					<img src="images/mainphotos/NewYorkMain.jpg" alt="no image" width=100%>
 					<h1>United States</h1>
-					<p>See Gallery</p>
 				</div>
 			</a>
 		
+			<a href="unitedstates.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/BanffMain.JPG" alt="no image" width=100%>
+					<h1>Canada</h1>
+				</div>
+			</a>
+			
+			<a href="unitedstates.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/FijiMain.jpg" alt="no image" width=100%>
+					<h1>Fiji</h1>
+				</div>
+			</a>
+			
+			<a href="unitedstates.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/IndiaMain.jpg" alt="no image" width=100%>
+					<h1>India</h1>
+				</div>
+			</a>
+			
+			<a href="unitedstates.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/LondonMain.JPG" alt="no image" width=100%>
+					<h1>United Kingdom</h1>
+				</div>
+			</a>
+			
+			<a href="unitedstates.html">
+				<div class="linkable-image">
+					<img src="images/mainphotos/DubaiMain.JPG" alt="no image" width=100%>
+					<h1>United Arab Emirates</h1>
+				</div>
+			</a>
+			
+			<!--
 			<div class="linkable-image">
 				<a href="newyork.html">
 					<img src="images/mainphotos/BanffMain.JPG" alt="no image" width=100%>
@@ -59,6 +94,7 @@
 				</a>
 				<div class="linkable-image-title">United Arab Emirates</div>
 			</div>
+			-->
 			
 		</div>
 		
