--- a/lasvegas.html
+++ b/lasvegas.html
@@ -28,7 +28,7 @@
 			</div>
 			
 			<div class="bigger">
-				<img src="images/subphotos/LasVegas/LasVegas4.jpg" alt="no image">
+				<img src="images/subphotos/LasVegas/LasVegas4.JPG" alt="no image">
 			</div>
 			
 			
