--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</div>
 			</a>
 			
-			<a href="unitedstates.html">
+			<a href="unitedarabemirates.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/DubaiMain.JPG" alt="no image" width=100%>
 					<h1>United Arab Emirates</h1>
