--- a/unitedstates.html
+++ b/unitedstates.html
@@ -45,7 +45,7 @@
 				</div>
 			</a>
 		
-			<a href="newyork.html">
+			<a href="arizona.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/GrandCanyonMain.JPG" alt="no image" width=100%>
 					<h1>Arizona</h1>
