--- a/arizona.html
+++ b/arizona.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>United Arab Emirates</title>
+		<title>Arizona</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
@@ -10,17 +10,17 @@
 		
 		<header id="main-header">
 			<a href="index.html">
-				<h1>United Arab Emirates</h1>
+				<h1>Arizona</h1>
 			</a>
 		</header>
 		
 		
 		<div>
-			<a href="dubai.html">
+			<a href="grandcanyon.html">
 				<div class="linkable-image">
 					
-					<img src="images/mainphotos/DubaiMain.JPG" alt="no image" width=100%>
-					<h1>Dubai</h1>
+					<img src="images/mainphotos/GrandCanyonMain.JPG" alt="no image" width=100%>
+					<h1>Grand Canyon</h1>
 					
 				</div>
 			</a>
