--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</div>
 			</a>
 			
-			<a href="unitedstates.html">
+			<a href="fiji.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/FijiMain.jpg" alt="no image" width=100%>
 					<h1>Fiji</h1>
