--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</div>
 			</a>
 		
-			<a href="unitedstates.html">
+			<a href="canada.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/BanffMain.JPG" alt="no image" width=100%>
 					<h1>Canada</h1>
@@ -45,7 +45,7 @@
 				</div>
 			</a>
 			
-			<a href="unitedstates.html">
+			<a href="unitedkingdom.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/LondonMain.JPG" alt="no image" width=100%>
 					<h1>United Kingdom</h1>
