--- a/canada.html
+++ b/canada.html
@@ -26,6 +26,17 @@
 			</a>
 		</div>
 		
+		<div>
+			<a href="toronto.html">
+				<div class="linkable-image">
+					
+					<img src="images/subphotos/Toronto/Toronto1.jpeg" alt="no image" width=100%>
+					<h1>Toronto</h1>
+					
+				</div>
+			</a>
+		</div>
+		
 		<footer id="main-footer">
 			<p>Copyright &copy; 2022 Daiwik Swaminathan</p>
 		</footer>
