--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</div>
 			</a>
 			
-			<a href="unitedstates.html">
+			<a href="india.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/IndiaMain.jpg" alt="no image" width=100%>
 					<h1>India</h1>
