--- a/unitedstates.html
+++ b/unitedstates.html
@@ -31,7 +31,7 @@
 				</div>
 			</a>
 		
-			<a href="newyork.html">
+			<a href="hawaii.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/KauaiMain.jpg" alt="no image" width=100%>
 					<h1>Hawaii</h1>
