--- a/unitedstates.html
+++ b/unitedstates.html
@@ -38,7 +38,7 @@
 				</div>
 			</a>
 		
-			<a href="newyork.html">
+			<a href="washington.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/SeattleMain.jpg" alt="no image" width=100%>
 					<h1>Washington</h1>
