--- a/washington.html
+++ b/washington.html
@@ -25,6 +25,17 @@
 			</a>
 		</div>
 		
+		<div>
+			<a href="bellevue.html">
+				<div class="linkable-image">
+					
+					<img src="images/subphotos/Bellevue/Bellevue1.jpeg" alt="no image" width=100%>
+					<h1>Bellevue</h1>
+					
+				</div>
+			</a>
+		</div>
+		
 		<footer id="main-footer">
 			<p>Copyright &copy; 2022 Daiwik Swaminathan</p>
 		</footer>
