--- a/washington.html
+++ b/washington.html
@@ -36,6 +36,17 @@
 			</a>
 		</div>
 		
+		<div>
+			<a href="olympic.html">
+				<div class="linkable-image">
+					
+					<img src="images/subphotos/Olympic National Park/Olympic1.jpeg" alt="no image" width=100%>
+					<h1>Olympic National Park</h1>
+					
+				</div>
+			</a>
+		</div>
+		
 		<footer id="main-footer">
 			<p>Copyright &copy; 2022 Daiwik Swaminathan</p>
 		</footer>
