--- a/newyork.html
+++ b/newyork.html
@@ -1,44 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Niagra Falls, New York</title>
+		<title>New York</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
 		
 		<header id="main-header">
 			<a href="index.html">
-				<h1>Photography</h1>
+				<h1>New York</h1>
 			</a>
 		</header>
 		
-		
-		<div class="place-title-subpage">
-			<center><h1>Niagra Falls, New York</h1>
-		</div>
-
-		
 		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach1.jpg" alt="no image" width=95%>
+			<a href="niagrafalls.html">
+				<div class="linkable-image">
+					
+					<img src="images/mainphotos/NewYorkMain.jpg" alt="no image" width=100%>
+					<h1>Niagra Falls</h1>
+					
+				</div>
+			</a>
 		</div>
-		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach2.jpg" alt="no image" width=95%>
-		</div>
-		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach3.jpg" alt="no image" width=95%>
-		</div>
-		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach4.jpg" alt="no image" width=95%>
-		</div>
-		
-		<div>
-			<center><img style="border:10px solid #333;" src="images/subphotos/AvilaBeach5.jpg" alt="no image" width=95%>
-		</div>
-		
 		
 		
 		
