--- a/olympic.html
+++ b/olympic.html
@@ -10,7 +10,7 @@
 		
 		<header id="main-header">
 			<a href="index.html">
-				<h1>Olympic National Park</h1>
+				<h1>Olympic National Forrest</h1>
 			</a>
 		</header>
 		
