--- a/newyork.html
+++ b/newyork.html
@@ -25,6 +25,17 @@
 			</a>
 		</div>
 		
+		<div>
+			<a href="rochester.html">
+				<div class="linkable-image">
+					
+					<img src="images/subphotos/Rochester/Rochester1.jpeg" alt="no image" width=100%>
+					<h1>Rochester</h1>
+					
+				</div>
+			</a>
+		</div>
+		
 		
 		
 		<footer id="main-footer">
