--- a/newyork.html
+++ b/newyork.html
@@ -36,6 +36,17 @@
 			</a>
 		</div>
 		
+		<div>
+			<a href="letchworthstatepark.html">
+				<div class="linkable-image">
+					
+					<img src="images/subphotos/LetchworthStatePark/LetchworthStatePark1.jpeg" alt="no image" width=100%>
+					<h1>Letchworth State Park</h1>
+					
+				</div>
+			</a>
+		</div>
+		
 		
 		
 		<footer id="main-footer">
