--- a/california.html
+++ b/california.html
@@ -24,49 +24,49 @@
 				</div>
 			</a>
 		
-			<a href="newyork.html">
+			<a href="carmel.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/CarmelMain.JPG" alt="no image" width=100%>
 					<h1>Carmel</h1>
 				</div>
 			</a>
 		
-			<a href="newyork.html">
+			<a href="halfmoonbay.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/HalfMoonBayMain.jpg" alt="no image" width=100%>
 					<h1>Half Moon Bay</h1>
 				</div>
 			</a>
 		
-			<a href="newyork.html">
+			<a href="losangeles.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/LosAngelesMain.JPG" alt="no image" width=100%>
 					<h1>Los Angeles</h1>
 				</div>
 			</a>
 		
-			<a href="newyork.html">
+			<a href="marineheadlands.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/MarineHeadlandsMain.JPG" alt="no image" width=100%>
 					<h1>Marine Headlands</h1>
 				</div>
 			</a>
 		
-			<a href="newyork.html">
+			<a href="muirwoods.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/MuirWoodsMain.JPG" alt="no image" width=100%>
 					<h1>Muir Woods</h1>
 				</div>
 			</a>
 			
-			<a href="newyork.html">
+			<a href="santabarbara.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/SantaBarbaraMain.jpg" alt="no image" width=100%>
 					<h1>Santa Barbara</h1>
 				</div>
 			</a>
 			
-			<a href="newyork.html">
+			<a href="yosemite.html">
 				<div class="linkable-image">
 					<img src="images/mainphotos/YosemiteMain.JPG" alt="no image" width=100%>
 					<h1>Yosemite</h1>
