--- a/california.html
+++ b/california.html
@@ -8,11 +8,35 @@
 	
 	<body>
 		
-		<header id="main-header">
+		<!-- <header id="main-header">
 			<a href="index.html">
 				<h1>California</h1>
 			</a>
-		</header>
+		</header> -->
+
+		<nav role="navigation" class="primary-navigation">
+			
+			<ul>
+				<li><a class="dropdown-text" href="index.html">Photography ~</a>
+					<ul class="dropdown">
+						<li><a href="unitedstates.html">United States</a></li>
+					</ul>
+				</li>
+				
+				<li><a class="dropdown-text" href="unitedstates.html">United States ~</a>
+					<ul class="dropdown">
+						<li><a href="california.html">California</a></li>
+					</ul>
+				</li>
+
+				<li><a class="dropdown-text" href="california.html">California ~</a>
+					<ul class="dropdown">
+						<li><a href="avilabeach.html">Avila Beach</a></li>
+					</ul>
+				</li>
+			</ul>
+
+		</nav>
 		
 		
 		<div class="image-grid">
