--- a/index.html
+++ b/index.html
@@ -8,12 +8,29 @@
 	
 	<body>
 		
-		<header id="main-header">
-			<a href="index.html">
-				<h1>Photography</h1>
-			</a>
-		</header>
-		
+		<!-- <header id="main-header"> -->
+
+		<nav role="navigation" class="primary-navigation">
+			
+			<ul>
+				<li><a class="dropdown-text" href="#">Photography ~</a>
+					<ul class="dropdown">
+						<li><a href="unitedstates.html">United States</a></li>
+						<li><a href="canada.html">Canada</a></li>
+						<li><a href="fiji.html">Fiji</a></li>
+						<li><a href="india.html">India</a></li>
+						<li><a href="unitedkingdom.html">United Kingdom</a></li>
+						<li><a href="unitedarabemirates.html">United Arab Emirates</a></li>
+					</ul>
+
+					
+				</li>
+				
+			</ul>
+
+		</nav>
+			
+		<!-- </header> -->
 		
 		<div class="image-grid">
 			
