Commit 42: Added latest gallery

--- a/arizona.html
+++ b/arizona.html
@@ -8,12 +8,40 @@
 	
 	<body>
 		
-		<header id="main-header">
+		<!-- <header id="main-header">
 			<a href="index.html">
 				<h1>Arizona</h1>
 			</a>
-		</header>
+		</header> -->
 		
+		<nav role="navigation" class="primary-navigation">
+			
+			<ul>
+				<li><a class="dropdown-text" href="index.html">Photography &rtrif;</a>
+					<ul class="dropdown">
+						<li><a href="unitedstates.html">United States</a></li>
+					</ul>
+				</li>
+				
+				<li><a class="dropdown-text" href="unitedstates.html">United States &rtrif;</a>
+					<ul class="dropdown">
+						<li><a href="california.html">California</a></li>
+						<li><a href="newyork.html">New York</a></li>
+						<li><a href="hawaii.html">Hawaii</a></li>
+						<li><a href="washington.html">Washington</a></li>
+						<li><a href="arizona.html">Arizona</a></li>
+						<li><a href="nevada.html">Nevada</a></li>
+					</ul>
+				</li>
+
+				<li><a class="dropdown-text" href="nevada.html">Nevada &rtrif;</a>
+					<ul class="dropdown">
+						<li><a href="grandcanyon.html">Grand Canyon</a></li>
+					</ul>
+				</li>
+			</ul>
+
+		</nav>
 		
 		<div>
 			<a href="grandcanyon.html">
