--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<nav role="navigation" class="primary-navigation">
 			
 			<ul>
-				<li><a class="dropdown-text" href="#">Photography ~</a>
+				<li><a class="dropdown-text" href="#">Photography &rtrif;</a>
 					<ul class="dropdown">
 						<li><a href="unitedstates.html">United States</a></li>
 						<li><a href="canada.html">Canada</a></li>
@@ -31,6 +31,18 @@
 		</nav>
 			
 		<!-- </header> -->
+
+		<article id="latest">
+			<a href="newyork.html">
+				<div class="linkable-image">
+					<img src="images/subphotos/Toronto/Toronto1.jpeg" alt="no image">
+					<div id="latest-text-box">
+						<h2>Toronto</h2>
+						<p>Latest gallery</p>
+					</div>
+				</div>
+			</a>
+		</article>
 		
 		<div class="image-grid">
 			
