--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- </header> -->
 
 		<article id="latest">
-			<a href="newyork.html">
+			<a href="toronto.html">
 				<div class="linkable-image">
 					<img src="images/subphotos/Toronto/Toronto1.jpeg" alt="no image">
 					<div id="latest-text-box">
