--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 			<header id="main-header">
 
-				<video id="videoBG" poster="videos/poster.png" autoplay muted loop>
+				<video id="videoBG" poster="videos/poster.png" playsinline autoplay muted loop>
 					<source src="videos/earth4.mp4" type="video/mp4">
 				</video>
 
