--- a/unitedstates.html
+++ b/unitedstates.html
@@ -24,7 +24,8 @@
 					</ul>
 				</li>
 				
-				<li><a class="dropdown-text" href="unitedstates.html">United States &rtrif;</a>
+				<li>
+					<a class="dropdown-text" href="unitedstates.html">United States &rtrif;</a>
 					<ul class="dropdown">
 						<li><a href="california.html">California</a></li>
 						<li><a href="newyork.html">New York</a></li>
