first try at fixing mobile hover bug

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 			<header id="main-header">
 
+				<!-- Video credit to Ben 3D: https://www.youtube.com/watch?v=rDrjQyatgXQ&list=WL&index=3 -->
 				<video id="videoBG" poster="images/poster.png" playsinline autoplay muted loop>
 					<source src="videos/earth.mp4" type="video/mp4">
 				</video>
